# van

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: dev-release.yml  release.yml
crates/van-cli/: Cargo.toml  README.md
crates/van-cli/crates/van/: Cargo.toml
crates/van-cli/crates/van-context/: Cargo.toml  README.md
crates/van-cli/crates/van-context/src/: config.rs  project.rs
crates/van-cli/crates/van-dev/: Cargo.toml  README.md
crates/van-cli/crates/van-dev/src/: client.js  lib.rs  playground.html  render.rs  server.rs  watcher.rs
crates/van-cli/crates/van-init/: Cargo.toml  README.md
crates/van-cli/crates/van-init/src/: lib.rs
crates/van-cli/crates/van-init/src/templates/components/: hello.van
crates/van-cli/crates/van-init/src/templates/layouts/: default.van
crates/van-cli/crates/van-init/src/templates/mock/: index.json
crates/van-cli/crates/van-init/src/templates/pages/: index.van
crates/van-cli/crates/van/src/: main.rs
crates/van-cli/src/: lib.rs  main.rs
crates/van-cli/src/cmd/: build.rs  dev.rs  generate.rs  init.rs  mod.rs
crates/van-compiler/: Cargo.toml  README.md
crates/van-compiler-wasi/: Cargo.toml
crates/van-compiler-wasi/src/: main.rs
crates/van-compiler/src/: i18n.rs  lib.rs  render.rs  resolve.rs
crates/van-parser/: Cargo.toml  README.md
crates/van-parser/src/: lib.rs
crates/van-signal-gen/: Cargo.toml  README.md
crates/van-signal-gen/src/: lib.rs  runtime.js
docs/i18n/zh-CN/: README.md
spec/: v0.1.md
