[workspace.package]
version = "0.1.10"
edition = "2021"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "crates/van-parser",
    "crates/van-compiler",
    "crates/van-compiler-wasi",
    "crates/van-signal-gen",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1.12"
wasm-bindgen = "0.2"
