[workspace.package]
version = "0.1.12"
edition = "2021"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "crates/van-parser",
    "crates/van-compiler",
    "crates/van-compiler-wasi",
    "crates/van-signal-gen",
    "crates/van-cli",
    "crates/van-cli/crates/van-context",
    "crates/van-cli/crates/van-dev",
    "crates/van-cli/crates/van-init",
]

[workspace.dependencies]
# Internal crates — core engine
van-parser = { path = "crates/van-parser" }
van-signal-gen = { path = "crates/van-signal-gen" }
van-compiler = { path = "crates/van-compiler" }
# Internal crates — CLI
van-context = { path = "crates/van-cli/crates/van-context" }
van-dev = { path = "crates/van-cli/crates/van-dev" }
van-init = { path = "crates/van-cli/crates/van-init" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Utilities
regex = "1.12"
wasm-bindgen = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.2"

# Async / Web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
notify = "8.2.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
