[package]
name = "van-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Server-side HTML compiler for Van template engine (.van files)"
keywords = ["van", "template", "compiler", "html", "ssr"]
categories = ["template-engine", "compilers"]

[lib]
crate-type = ["rlib"]

[dependencies]
van-parser = { workspace = true }
van-signal-gen = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
wasm = ["wasm-bindgen"]
