[package]
name = "van-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Recursive descent parser for .van (Vue SFC syntax) template files"
keywords = ["van", "template", "parser", "vue", "sfc"]
categories = ["template-engine", "parsing"]

[dependencies]
regex = { workspace = true }
