[package]
name = "van-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Project context and configuration for Van template engine CLI"
keywords = ["van", "context", "configuration"]
categories = ["template-engine"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
