[package]
name = "van-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dev server with hot reload for Van template engine"
keywords = ["van", "dev-server", "hot-reload"]
categories = ["template-engine", "development-tools"]

[dependencies]
van-parser = { workspace = true }
van-compiler = { workspace = true }
van-context = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
